Creacion de MVC junto con la BD para registro e inicio de sesion

--- a/proyectosena/src/main/resources/templates/registro.html
+++ b/proyectosena/src/main/resources/templates/registro.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer proyecto</title>
-    <link rel="stylesheet" href="../css/proyecto.css">
+    <link rel="stylesheet" href="/css/proyecto.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
@@ -13,44 +13,48 @@
         <h3>My project</h3>
         <h1>Registrarse</h1>
     </header>
-    <form action="">
-        <h2>Crea tu cuenta</h2>
-        <!-- Preguntas de formulario -->
-        <P>
-            <label for="name">Ingrese su nombre</label>
-        </P>
-            <input type="text" id="name" class="inputNombre" placeholder="Primer nombre" maxlength="50" minlength="2">
-            <input type="text" id="lastname" class="inputNombre" placeholder="Primer apellido" maxlength="50" minlength="2">
-            
-        <P>
-            <label for="correoEle">Correo electronico</label>
-        </P>
-            <input type="email" id="correoEle" placeholder="minombre@mirpoyecto.com">
-        <P>
-            <label for="numeroCel">Numero celular</label>
-        </P>
-            <input class="input2" type="text" placeholder="+57"><input type="text" class="input3" placeholder="Numero de celular" id="numeroCel">
-        <P>
-            <label for="password">Contraseña</label>
-        </P>
-            <input type="password" id="password" placeholder="Ingrese su contraseña">
-        <P>
-            <label for="conPassword">Confirme su contraseña</label>
-        </P>
-            <input type="password" id="conPassword" placeholder="Confirme su contraseña">
-        <p id="incorrecto"></p>
-        <!-- Imagen de perfil -->
-        <p class="p1">
-            <label>Imagen de perfil</label> 
-            <img src="../img/imagen1.jpeg" alt="fotoperfil" id="ImgProfile" class="img1" >
-            <label for="imgInp" class="btn1File">Agregar</label>
-            <input class="btnFile" type="file" accept=".jpg, .png, .jpeg" id="imgInp">
-        </p>
-    </form>
+    <div>
+        <div th:if="${param.exito}">
+            <div class="alerta">
+                Se ha registrado exitosamente a la aplicacion
+            </div>
+        </div>
+        <form th:action="@{/registro}" method="post" th:object="${usuario}">
+            <h2>Crea tu cuenta</h2>
+            <!-- Preguntas de formulario -->
+            <P>
+                <label for="nombre">Ingrese su nombre</label>
+            </P>
+                <input type="text" id="nombre" th:field="*{nombre}" class="inputNombre" placeholder="Primer nombre" maxlength="50" minlength="2" required>
+                <input type="text" id="apellido" th:field="*{apellido}" class="inputNombre" placeholder="Primer apellido" maxlength="50" minlength="2" required>
+                
+            <P>
+                <label for="correo">Correo electronico</label>
+            </P>
+                <input type="email" id="correo" th:field="*{correo}"  placeholder="minombre@mirpoyecto.com" required>
+            <P>
+                <label for="numeroCelular">Numero celular</label>
+            </P>
+                <input type="text" class="input3"  placeholder="Numero de celular" id="numeroCelular" th:field="*{numeroCelular}" required>
+            <P>
+                <label for="password">Contraseña</label>
+            </P>
+                <input type="password" id="password" th:field="*{password}" placeholder="Ingrese su contraseña" required>
+            <p id="incorrecto"></p>
+            <span>¿Estas registrado? <a th:href="@{/inicioSesion}">Inicio de sesion</a> </span>
+            <!-- Imagen de perfil -->
+            <!-- <p class="p1">
+                <label>Imagen de perfil</label> 
+                <img src="../img/imagen1.jpeg" alt="fotoperfil" id="ImgProfile" class="img1" >
+                <label for="imgInp" class="btn1File">Agregar</label>
+                <input class="btnFile" type="file" accept=".jpg, .png, .jpeg" id="imgInp">
+            </p> -->
+            <button type="submit" class="btn1" onclick="registro()">Registrarse</button>
+        </form>
+    </div>
     <!-- Boton principal para envio del formulario -->
     <p>
-        <button type="submit" class="btn1" id="registrarse" onclick="registro()">Registrarse</button>
-        <img src="../img/imagen2.png" alt="caja" class="img2">
+        <img src="/img/imagen2.png" alt="caja" class="img2">
         <label for="terminos" class="term">Al crear una cuenta, acepta las condiciones de uso y aviso de privacidad.</label>
         <input type="checkbox" class="check" id="terminos">
     </p>
@@ -81,6 +85,6 @@
             <a href="registro.html">Registrate</a><br>
         </div>
     </footer>
-    <script src="..//js/proyecto.js"></script>
+    <!-- <script src="/js/proyecto.js"></script> -->
 </body>
 </html>
