Desarrollo de estilos adicionales y de mensajes de alerta para inicio de sesion y registro4

--- a/proyectosena/src/main/resources/templates/index.html
+++ b/proyectosena/src/main/resources/templates/index.html
@@ -28,9 +28,9 @@
         </div>
 
         <div class="divIndex2">
+            <!-- <a href="html/inicioSesion.html" class="aIndex2">Iniciar sesion</a>
+            <a href="html/registro.html" class="aIndex2">Registrarse</a> -->
             <a th:href="@{/logout}">Cerrar sesión</a>
-            <a href="html/inicioSesion.html" class="aIndex2">Iniciar sesion</a>
-            <a href="html/registro.html" class="aIndex2">Registrarse</a>
         </div>
     </header>
     <!-- Prototipo de vista productos no dinamicos -->
