--- a/proyectosena/src/main/resources/static/css/proyecto.css
+++ b/proyectosena/src/main/resources/static/css/proyecto.css
@@ -5,13 +5,80 @@ header{
     padding-top: 2px;
     border: solid black;
     margin: 5px;
+    border-radius: 10px;
 }
+
+.anchoAlerta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.alerta{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 1.5rem;
+    border-radius: 8px;
+    width: 400px;
+    margin: 1rem 0;
+    font-family: Arial, sans-serif;
+    font-size: 1rem;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    background-color: #d1e7dd;
+    color: #0f5132;
+    border: 1px solid #badbcc;
+}
+
+.error{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 1.5rem;
+    border-radius: 8px;
+    width: 430px;
+    margin: 1rem 0;
+    font-family: Arial, sans-serif;
+    font-size: 1rem;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    background-color: #ef8c8c;
+    color: #060000;
+    border: 1px solid #badbcc;
+}
+
+.logout{    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 1.5rem;
+    border-radius: 8px;
+    width: 430px;
+    margin: 1rem 0;
+    font-family: Arial, sans-serif;
+    font-size: 1rem;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    background-color: #d1e7dd;
+    color: #0f5132;
+    border: 1px solid #badbcc;
+}
+.aRedit {
+    color: black;
+    padding-left: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.text {
+    color: rgb(38,35,35);
+}
+
 h1{
     text-align: center;
 }
 form{
     margin: 0 auto;
     width: 400px;
+    height: 360px;
     background-color: rgb(247,243,243 );
     padding: 20px;
     border-radius: 20px;
@@ -129,6 +196,7 @@ footer{
     display: flex;
     justify-content: center;
     border: solid black;
+    border-radius: 10px;
 }
 
 .divfooter{
@@ -156,20 +224,20 @@ a{
 /* Extras pantalla inicio de sesion */
 
 .form1{
-    height: 340px;
+    height: 310px;
     padding: 50px;
 }
 
 .label2{
-    font-size: 25px;
+    font-size: 20px;
     display: flex;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
 }
 
 .inputP2{
-    height: 40px;
+    height: 35px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -626,7 +694,7 @@ ul li:hover ul.dropDown{
 }
 
 .divIndex2{
-    padding-left: 320px;
+    padding-left: 430px;
 }
 
 .aIndex2{
