--- a/proyectosena/src/main/resources/templates/registro.html
+++ b/proyectosena/src/main/resources/templates/registro.html
@@ -10,13 +10,15 @@
 <body>
     <!-- Formulario de registro -->
     <header>
-        <h3>My project</h3>
-        <h1>Registrarse</h1>
+            <h3>My project</h3>
+            <h2>Registrarse</h2>
     </header>
     <div>
-        <div th:if="${param.exito}">
-            <div class="alerta">
-                Se ha registrado exitosamente a la aplicacion
+        <div class="anchoAlerta">
+            <div th:if="${param.exito}">
+                <div class="alerta">
+                    Se ha registrado exitosamente a la aplicacion
+                </div>
             </div>
         </div>
         <form th:action="@{/registro}" method="post" th:object="${usuario}">
@@ -35,13 +37,13 @@
             <P>
                 <label for="numeroCelular">Numero celular</label>
             </P>
-                <input type="text" class="input3"  placeholder="Numero de celular" id="numeroCelular" th:field="*{numeroCelular}" required>
+                <input type="text" placeholder="Numero de celular" id="numeroCelular" th:field="*{numeroCelular}" required>
             <P>
                 <label for="password">Contraseña</label>
             </P>
                 <input type="password" id="password" th:field="*{password}" placeholder="Ingrese su contraseña" required>
             <p id="incorrecto"></p>
-            <span>¿Estas registrado? <a th:href="@{/inicioSesion}">Inicio de sesion</a> </span>
+            <span class="aRedit">¿Estas registrado? <a class="aRedit text" th:href="@{/inicioSesion}">Inicio de sesion</a></span>
             <!-- Imagen de perfil -->
             <!-- <p class="p1">
                 <label>Imagen de perfil</label> 
@@ -56,7 +58,7 @@
     <p>
         <img src="/img/imagen2.png" alt="caja" class="img2">
         <label for="terminos" class="term">Al crear una cuenta, acepta las condiciones de uso y aviso de privacidad.</label>
-        <input type="checkbox" class="check" id="terminos">
+        <!-- <input type="checkbox" class="check" id="terminos"> -->
     </p>
     <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa">Mapa de navegacion</h3>
