--- a/proyectosena/src/main/resources/templates/registro.html
+++ b/proyectosena/src/main/resources/templates/registro.html
@@ -44,9 +44,10 @@
                 <input type="password" id="password" th:field="*{password}" placeholder="Ingrese su contraseña" required>
             <p id="incorrecto"></p>
             <label>Selecciona uno o más roles:</label><br>
-
-            <input type="checkbox" th:field="*{rolSeleccionado}" value="ROLE_COMPRADOR" /> Comprador<br>
-            <input type="checkbox" th:field="*{rolSeleccionado}" value="ROLE_VENDEDOR" /> Vendedor<br>
+            <div class="checkRol">
+                <input type="checkbox" th:field="*{rolSeleccionado}" value="ROLE_COMPRADOR" id="checkRol1" /><label for="checkRol1">Comprador</label>
+                <input type="checkbox" th:field="*{rolSeleccionado}" value="ROLE_VENDEDOR" id="checkRol2" /><label for="checkRol2">Vendedor</label>
+            </div>
             <span class="aRedit">¿Estas registrado? <a class="aRedit text" th:href="@{/inicioSesion}">Inicio de sesion</a></span>
             <!-- Imagen de perfil -->
             <!-- <p class="p1">
