--- a/proyectosena/src/main/resources/templates/index.html
+++ b/proyectosena/src/main/resources/templates/index.html
@@ -8,123 +8,66 @@
 </head>
 <!-- Pantalla principal sin inicio de sesion -->
 <!-- Encabezado de la pagina  -->
+    <div>
     <header class="headerIndex">
-        <ul class="ul1">
-            <li>
-                <button class="btn15" id="btnDropDown"><img src="img/dropdownicon.png" alt="" class="imgIndex"></button>
-                <ul class="dropDown">
-                    <li><a href="html/listaPedidos.html" class="aIndex">Mis pedidos</a></li>
-                    <li><a href="" class="aIndex">Segunda opcion</a></li>
-                    <li><a href="" class="aIndex">Tercera opcion</a></li>
-                    <li><a href="" class="aIndex">Cuarta opcion</a></li>
-                    <li><a href="" class="aIndex">Quinta opcion</a></li>
-                </ul>
-            </li>
-        </ul>
-        <!-- Barra de busqueda -->
-        <div class="divIndex">
-                <input type="text" placeholder="Buscar..." class="inputIndex" id="buscar">
-                <button class="btn16" id="btnBuscar"><img src="img/glassIcon.png" alt="" class="imgIndex2"></button>
-        </div>
+            <!-- Barra de busqueda -->
+            <div class="divIndex">
+                    <input type="text" placeholder="Buscar..." class="inputIndex" id="buscar">
+                    <button class="btn16" id="btnBuscar"><img src="img/glassIcon.png" alt="" class="imgIndex2"></button>
+            </div>
 
-        <div class="divIndex2">
-            <!-- <a href="html/inicioSesion.html" class="aIndex2">Iniciar sesion</a>
-            <a href="html/registro.html" class="aIndex2">Registrarse</a> -->
-            <a th:href="@{/logout}">Cerrar sesión</a>
-        </div>
+            <div class="divIndex2">
+                <!-- <a href="html/inicioSesion.html" class="aIndex2">Iniciar sesion</a>
+                <a href="html/registro.html" class="aIndex2">Registrarse</a> -->
+                <a th:href="@{/logout}">Cerrar sesión</a>
+            </div>
     </header>
-    <!-- Prototipo de vista productos no dinamicos -->
-    <h2 class="h2Index">Productos</h2>
-    <p class="pIndex2">Categoria: Juegos</p>
-    <div class="divIndex3">
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
+    <div class="container">
+        <div class="sidebar" id="sidebar">
+            <div class="sidebar-toggle" onclick="toggleSidebar()">☰</div>
+            <ul>
+                <li><a href="" class="aIndex">Mis pedidos</a></li>
+                <li><a href="" class="aIndex">Productos</a></li>
+                <li><a href="" class="aIndex">Carrito de compras</a></li>
+                <li><a href="" class="aIndex">¿Quieres vender?</a></li>
+            </ul>
         </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
+        <!-- Prototipo de vista productos no dinamicos -->
+    
+    <div class="main-content" id="main">
+        <h2 class="h2Index">Productos</h2>
+        <p class="pIndex2">Categoria: Juegos</p>
+        <div class="divIndex3">
+            <div class="divIndex4">
+                <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
+                <p class="pIndex">Nombre producto</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
+                <p class="pIndex">Precio: $$$$$</p>
+                <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
+            </div>
+            <div class="divIndex4">
+                <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
+                <p class="pIndex">Nombre producto</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
+                <p class="pIndex">Precio: $$$$$</p>
+                <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
+            </div>
+            <div class="divIndex4">
+                <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
+                <p class="pIndex">Nombre producto</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
+                <p class="pIndex">Precio: $$$$$</p>
+                <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
+            </div>
+            <div class="divIndex4">
+                <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
+                <p class="pIndex">Nombre producto</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
+                <p class="pIndex">Precio: $$$$$</p>
+                <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
+            </div>
         </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        
     </div>
-    <p class="pIndex2">Categoria: Hogar</p>
-    <div class="divIndex3">
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
-        <div class="divIndex4">
-            <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
-            <p class="pIndex">Nombre producto</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
-            <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
-        </div>
     </div>
     <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa">Mapa de navegacion</h3>
@@ -153,5 +96,11 @@
             <a href="/html/registro.html">Registrate</a><br>
         </div>
     </footer>
+    <script>
+    function toggleSidebar() {
+        document.getElementById("sidebar").classList.toggle("collapsed");
+        document.getElementById("main").classList.toggle("expanded");
+    }
+    </script>
 </body>
 </html>
