Creacion de modelo producto al igual que sus DTOs con adaptaciones a la pagina de registro articulo para el formulario de ingreso y creacion de repositorios y de inicializacion de datos en configuracion

--- a/proyectosena/src/main/resources/templates/registroArticulo.html
+++ b/proyectosena/src/main/resources/templates/registroArticulo.html
@@ -32,6 +32,7 @@
                             <li>Ropa y accesorios</li>
                             <li>Tecnologia</li>
                             <li>Juguetes</li>
+                            <li>Deporte</li>
                         </ul>
                     </select>
                     <p>
@@ -60,7 +61,7 @@
                     <h2 class="pagop4" >Medios de pago</h2>
                     <img class="img4" src="../img/imagen4.png" alt="Billetera">
                 </div>
-                <h2 class="h4P3" > Tipos de pago y tiempos de entrega </h2>
+                <h2 class="h4P3" > Tipos de pago</h2>
                 <!-- Formulario para ingresar informacion del pagos  -->
                 <form action="" class="form3" >
                     <p>
