--- a/proyectosena/src/main/resources/templates/registroArticulo.html
+++ b/proyectosena/src/main/resources/templates/registroArticulo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th= "http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,74 +8,79 @@
 </head>
 <body>
     <!-- Registro de articulo -->
-    <div class="divPrueba">
-        <div class="divP3">
-            <h3 class="h3P3">My project</h3>
-            <h1 class="h1P3">Registro Articulo</h1>
-            <img src="../img/imagen3.png" alt="Manos" class="imgP3">
-        </div>
-        <div>
-            <!-- Formulario para ingresar un producto rol de vendedor -->
-            <form action="">
-                <h4 class="h4P3">Ingrese los datos del producto a vender</h4>
-                <form action="" class="form2">
-                    <p>
-                        <label for="">Nombre (producto)</label>
-                    </p>
-                    <input type="text" placeholder="Ingrese el nombre del producto">
-                    <p>
-                        <label for="">Categoria</label>
-                    </p>
-                    <select name="" id="">
-                        <ul>
-                            <li>Hogar</li>
-                            <li>Ropa y accesorios</li>
-                            <li>Tecnologia</li>
-                            <li>Juguetes</li>
-                            <li>Deporte</li>
-                        </ul>
-                    </select>
-                    <p>
-                        <label for="">Fotografia</label>
-                    </p>
-                    <button class="btn"><label for="fotos">Subir<input type="file" class="btnFile" id="fotos"></label></button>
-                    <label for="">PNG. JPG.</label>
-                    <p>
-                        <label for="">Descripción del producto</label>
-                    </p>
-                    <textarea name="" id="" placeholder="Ingrese todos los datos de especificacion del producto"></textarea>
-                    <p>
-                        <label for="">Costo del producto</label>
-                    </p>
-                    <input type="text" class="input2" value="$" disabled>
-                    <input type="text" class="inputP3">
-                    <input type="text" class="input2" value="COP" disabled>
-                    <!-- <p class="centrarBoton">
-                        <button type="button" class="btn4">Siguiente</button>
-                    </p> -->
-                </form>
-        </div>
-        <div>
-                <!-- Agregar medios de pago rol de vendedor -->
-                <div class="hp4">
-                    <h2 class="pagop4" >Medios de pago</h2>
-                    <img class="img4" src="../img/imagen4.png" alt="Billetera">
+        <div> 
+        <div class="divPrueba">
+            <div class="divP3">
+                <h3 class="h3P3">My project</h3>
+                <h1 class="h1P3">Registro Articulo</h1>
+                <img src="../img/imagen3.png" alt="Manos" class="imgP3">
+            </div>
+            <div class="divGeneral">
+                <a th:href="@{/}" class="aGeneral">Regresar</a>
+                <a th:href="@{/logout}" class="aGeneral">Cerrar sesión</a>
+            </div>
+        <div class="divAjustes">
+                <div>
+                <!-- Formulario para ingresar un producto rol de vendedor -->
+                <form th:action="@{/producto/guardar}" method="post" enctype="multipart/form-data" th:object="${productoDTO}">
+                    <h4 class="h4P3">Ingrese los datos del producto a vender</h4>
+                    <form action="" class="form2">
+                        <p>
+                            <label for="">Nombre (producto)</label>
+                        </p>
+                        <input type="text" placeholder="Ingrese el nombre del producto">
+                        <p>
+                            <label for="">Categoria</label>
+                        </p>
+                        <select name="" id="" required>
+                                <option value="" disabled selected>Seleccionar..</option>
+                                <option 
+                                    th:each="cat : ${categoria}" 
+                                    th:value="${cat.id}"
+                                    th:text="${cat.nombreCategoria}">
+                                </option>
+                        </select>
+                        <p>
+                            <label for="">Fotografia</label>
+                        </p>
+                        <button class="btn"><label for="fotos">Subir<input type="file" class="btnFile" id="fotos" name="archivoImagen" accept="image/*" required></label></button>
+                        <label for="">PNG. JPG.</label>
+                        <p>
+                            <label for="">Descripción del producto</label>
+                        </p>
+                        <textarea name="" id="" placeholder="Ingrese todos los datos de especificacion del producto" minlength="70"></textarea>
+                        <!-- <p class="centrarBoton">
+                            <button type="button" class="btn4">Siguiente</button>
+                        </p> -->
+                    </form>
                 </div>
-                <h2 class="h4P3" > Tipos de pago</h2>
-                <!-- Formulario para ingresar informacion del pagos  -->
-                <form action="" class="form3" >
-                    <p>
-                        <label for=""> Tipos de pago </label>
-                    </p>
-                    <button type="button" class="btn6" > TC </button><button type="button" class="btn6"> TD </button><button type="button" class="btn6" > CE </button>
-                    <p>
-                        <label for="" class="otros1" > Confirme todos los que apliquen de la siguiente manera, TC: Tarjeta de credito, TD: Tarjeta debito, CE: Contra entrega </label>
+                <div>
+                    <!-- Formulario para ingresar informacion del pagos  -->
+                    <form action="" class="form3" >
+                        <p class="tiposBold">
+                            <label for=""> Tipos de pago </label>
+                        </p>
+                        <!-- <button type="button" class="btn6" > TC </button><button type="button" class="btn6"> TD </button><button type="button" class="btn6" > CE </button> -->
+                         <div class="divPagos">
+                            <input type="checkbox" class="inputPagos">TC
+                            <input type="checkbox" class="inputPagos">TD
+                            <input type="checkbox" class="inputPagos">CE
+                         </div>
+                        <p>
+                            <label for="" class="otros1" > Confirme todos los que apliquen de la siguiente manera, TC: Tarjeta de credito, TD: Tarjeta debito, CE: Contra entrega </label>
+                        </p>
+                        <p>
+                            <label for="">Costo del producto</label>
+                        </p>
+                        <input type="text" class="input2" value="$" disabled>
+                        <input type="text" class="inputP3">
+                        <input type="text" class="input2" value="COP" disabled>
+                    </form>
+                    <p class="centrar1" >
+                        <button type="button" class="btn5" > Finalizar </button>
                     </p>
                 </form>
-                <p class="centrar1" >
-                    <button type="button" class="btn5" > Finalizar </button>
-                </p>
-            </form>
+            </div>
         </div>
         <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
         <h3 class="mapa">Mapa de navegacion</h3>
